--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-./Resources/css/style.css
-./Resources/css/box1_style.css
-./Resources/css/box3_style.css
-./Resources/css/box5_style.css
-./Resources/css/box6_style.css
-./Resources/css/box9_style.css
+style.css
+box1_style.css
+box3_style.css
+box5_style.css
+box6_style.css
+box9_style.css
